# big3_HDB_comparison

./: CMakeLists.txt  README.md
include/: HDB_supergate.hpp
lib/include/: HDB_supergate.hpp  HDB_supergate_server.hpp  HDB_supergate_user.hpp
src/: HDB_supergate.cpp  HDB_supergate_server.cpp  HDB_supergate_user.cpp
test/: CMakeLists.txt
test/db/: db.txt  db2.txt
test/src/: db.txt  main_query_test.cpp
